[gd_scene load_steps=6 format=3 uid="uid://b4snh7bprmdeq"]

[ext_resource type="Script" path="res://scripts/server.gd" id="1_w5wvi"]
[ext_resource type="Texture2D" uid="uid://bflmoeu7b8dx4" path="res://ui/dev_ui.png" id="3_12j77"]
[ext_resource type="PackedScene" uid="uid://dxv8682dqiwjq" path="res://models/dev_level.tscn" id="6_iykyq"]
[ext_resource type="Script" path="res://scripts/pathing.gd" id="6_jenf4"]
[ext_resource type="MeshLibrary" uid="uid://bsntenl3uqma0" path="res://models/astar_tiles.tres" id="7_kcfax"]

[node name="Main" type="Node3D"]
script = ExtResource("1_w5wvi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 5, 0)
light_bake_mode = 1
directional_shadow_max_distance = 50.0

[node name="Board" type="Node3D" parent="." node_paths=PackedStringArray("amap")]
script = ExtResource("6_jenf4")
amap = NodePath("AStarMap")

[node name="DevBoard" parent="Board" instance=ExtResource("6_iykyq")]

[node name="AStarMap" type="GridMap" parent="Board"]
visible = false
mesh_library = ExtResource("7_kcfax")
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(4, 65532, 0, 4, 65533, 0, 4, 65534, 0, 4, 65535, 0, 4, 0, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 3, 4, 0, 2, 4, 0, 2, 3, 0, 1, 3, 0, 0, 3, 0, 65535, 3, 0, 65534, 3, 0, 0, 4, 0, 1, 4, 0, 65533, 3, 0, 65534, 4, 0, 65535, 4, 0, 65533, 4, 0, 65532, 3, 0, 65532, 4, 0, 65532, 2, 0, 65532, 1, 0, 65532, 0, 0, 65532, 65535, 0, 65532, 65534, 0, 65532, 65533, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 2, 65531, 0, 3, 65531, 0, 3, 65532, 0, 2, 65532, 0, 1, 65532, 0, 0, 65532, 0, 65535, 65532, 0, 2, 65533, 0, 1, 65533, 0, 3, 65533, 0, 3, 65534, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 3, 2, 0, 3, 3, 0, 3, 1, 0, 3, 0, 0, 3, 65535, 0, 1, 2, 0, 0, 2, 0, 65535, 2, 0, 65535, 1, 0, 65534, 1, 0, 65533, 1, 0, 65533, 2, 0, 65534, 2, 0, 0, 1, 0, 0, 0, 0, 0, 65535, 0, 0, 65534, 0, 0, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 65535, 0, 0, 65534, 0, 0, 65534, 65535, 0, 65534, 65534, 0, 65534, 65533, 0, 65535, 65533, 0, 65535, 65534, 0, 65535, 65535, 0, 65533, 0, 0, 65533, 65535, 0, 65533, 65534, 0, 65533, 65533, 0, 65533, 65531, 0, 65533, 65530, 0, 65534, 65531, 0, 65534, 65530, 0, 65535, 65530, 0, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 0, 65531, 0, 6, 65534, 0, 7, 65534, 0, 7, 65535, 0, 7, 0, 0, 6, 0, 0, 6, 1, 0, 7, 1, 0, 7, 2, 0, 6, 2, 0, 6, 65535, 0)
}

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UILayer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="UILayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_12j77")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="UILayer/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 440.0

[node name="SubViewport" type="SubViewport" parent="UILayer/Control/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(580, 420)
render_target_update_mode = 4

[node name="TestCamera" type="Camera3D" parent="UILayer/Control/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.816541, 0.577288, 0, -0.577288, 0.816541, 0, 4.5952, 4.91563)

[node name="StartMenu" type="VBoxContainer" parent="UILayer/Control"]
layout_mode = 0
offset_left = 255.0
offset_top = 118.0
offset_right = 366.0
offset_bottom = 224.0

[node name="JoinButton" type="Button" parent="UILayer/Control/StartMenu"]
layout_mode = 2
text = "Join"

[node name="PortNumber" type="LineEdit" parent="UILayer/Control/StartMenu"]
layout_mode = 2
text = "9999"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player_character.tscn")
spawn_path = NodePath("../UILayer/Control/SubViewportContainer/SubViewport")

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://chat.tscn")
spawn_path = NodePath("../UILayer/Control")

[connection signal="pressed" from="UILayer/Control/StartMenu/JoinButton" to="." method="_on_join_pressed"]

[editable path="Board/DevBoard"]
